--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OfertasNet - Anuncie seus produtos</title>
+  <meta charset="UTF-8">
+  <title>Ofertas.net - Anuncie seus produtos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #2b7a78;
-      color: white;
-      padding: 20px;
       text-align: center;
+      padding: 50px;
+      background-color: #f0f0f0;
     }
-    .container {
-      padding: 20px;
+    h1 {
+      color: #333;
     }
-    .produto {
-      background:
+    p {
+      font-size: 18px;
+    }
+    button {
+      background-color: green;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: darkgreen;
+    }
+  </style>
+</head>
+<body>
+  <h1>Ofertas.net</h1>
+  <p>Anuncie produtos e negocie pelo WhatsApp, rápido e direto!</p>
+  <a href="https://wa.me/seunumerodetelefone" target="_blank">
+    <button>Anunciar pelo WhatsApp</button>
+  </a>
+</body>
+</html>
