--- a/index.html
+++ b/index.html
@@ -2,39 +2,59 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Ofertas.net - Anuncie seus produtos</title>
+  <title>Ofertas.net - Gere seu link de anúncio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 50px;
-      background-color: #f0f0f0;
+      background-color: #f9f9f9;
     }
-    h1 {
-      color: #333;
-    }
-    p {
-      font-size: 18px;
+    input {
+      padding: 10px;
+      width: 250px;
+      font-size: 16px;
     }
     button {
-      background-color: green;
-      color: white;
       padding: 10px 20px;
+      font-size: 16px;
+      margin-top: 10px;
+      cursor: pointer;
+      background-color: #28a745;
+      color: white;
       border: none;
       border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
     }
-    button:hover {
-      background-color: darkgreen;
+    a {
+      display: block;
+      margin-top: 20px;
+      font-size: 18px;
+      color: blue;
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <h1>Ofertas.net</h1>
-  <p>Anuncie produtos e negocie pelo WhatsApp, rápido e direto!</p>
-  <a href="https://wa.me/seunumerodetelefone" target="_blank">
-    <button>Anunciar pelo WhatsApp</button>
-  </a>
+  <p>Digite seu número de WhatsApp para gerar o link de anúncio:</p>
+
+  <input type="text" id="numero" placeholder="Ex: 5583987654321" />
+  <br />
+  <button onclick="gerarLink()">Gerar Link</button>
+
+  <div id="resultado"></div>
+
+  <script>
+    function gerarLink() {
+      var numero = document.getElementById("numero").value.trim();
+      if (numero.startsWith("55") && numero.length >= 12) {
+        var link = "https://wa.me/" + numero;
+        document.getElementById("resultado").innerHTML =
+          '<a href="' + link + '" target="_blank">Seu link do WhatsApp: ' + link + '</a>';
+      } else {
+        document.getElementById("resultado").innerHTML = "Número inválido! Use o formato: 55 + DDD + número";
+      }
+    }
+  </script>
 </body>
 </html>
